--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  color: #777777;
+  font-weight: 500;
+  background: #ffffff;
+  font-family: 'Quicksand', sans-serif;
+}
+
+h1,
+h2, 
+h3, 
+h4,
+h5, 
+h6 {
+  color: #4a4c70;
+}
+
+a {
+  color: #4a4c70;
+  transition: .3s;
+}
+
+a:hover,
+a:active,
+a:focus {
+  color: #FDBE33;
+  outline: none;
+  text-decoration: none;
+}
+
