--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 h1,
@@ -8,10 +8,65 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik Mono One', sans-serif;
+  font-family: "Rubik Mono One", sans-serif;
 }
 
 .small {
   font-weight: 300;
   font-style: italic;
+}
+
+/* CSS for donation button */
+.donate-btn {
+  color: white;
+  display: inline-block;
+  font-size: 2em;
+  font-weight: bold;
+  margin: 10px;
+}
+.donate-btn {
+  background: -moz-linear-gradient(center top, #f2d851, #ecc92b) repeat scroll 0
+    0 transparent;
+  box-shadow: -1px 0 1px #d9b826, 0 1px 1px #b1961d, -2px 1px 1px #d9b826,
+    -1px 2px 1px #b1961d, -3px 2px 1px #d9b826, -2px 3px 1px #b1961d,
+    -4px 3px 1px #d9b826, -3px 4px 1px #b1961d, -5px 4px 1px #d9b826,
+    -4px 5px 1px #b1961d, -6px 5px 1px #d9b826, -6px 7px 0 rgba(0, 0, 0, 0.05),
+    -5px 8px 0 rgba(0, 0, 0, 0.05), -3px 9px 0 rgba(0, 0, 0, 0.04),
+    -2px 10px 0 rgba(0, 0, 0, 0.04), -1px 11px 0 rgba(0, 0, 0, 0.03),
+    0 12px 0 rgba(0, 0, 0, 0.03), 1px 13px 0 rgba(0, 0, 0, 0.02),
+    2px 14px 0 rgba(0, 0, 0, 0.02), 3px 15px 0 rgba(0, 0, 0, 0.01),
+    4px 16px 0 rgba(0, 0, 0, 0.01), 5px 17px 0 rgba(0, 0, 0, 0.01),
+    6px 18px 0 rgba(0, 0, 0, 0.01),
+    0 4px 5px -2px rgba(255, 255, 255, 0.5) inset,
+    0 1px 0 0 rgba(0, 0, 0, 0.3) inset;
+  color: black;
+  text-shadow: -2px 2px 0 rgba(255, 255, 255, 0.3);
+}
+.donate-btn:after,
+.donate-btn:before {
+  background: none repeat scroll 0 0 black;
+}
+.donate-btn:active {
+  box-shadow: none;
+  transform: translate3d(-6px, 6px, 0px);
+}
+.donate-btn:after,
+.donate-btn:before {
+  background: none repeat scroll 0 0 white;
+  content: " ";
+  display: block;
+  height: 18px;
+  position: absolute;
+  right: 15px;
+  top: 14px;
+  transform: rotate(-45deg);
+  width: 6px;
+  z-index: 2;
+}
+.donate-btn:before {
+  height: 14px;
+  right: 16px;
+  top: 26px;
+  transform: rotate(-137deg);
+  z-index: 3;
 }
