--- a/free-charity-website-template/css/style.css
+++ b/free-charity-website-template/css/style.css
@@ -2,9 +2,9 @@
 /********* General CSS *********/
 /*******************************/
 body {
-    color: #777777;
+    color: #5E6472;
     font-weight: 500;
-    background: #ffffff;
+    background: #FAF3DD;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -25,7 +25,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-    color: #FDBE33;
+    color:#FFA69E;
     outline: none;
     text-decoration: none;
 }
@@ -99,7 +99,7 @@ a:focus {
     width: 45px;
     height: 45px;
     border: 5px solid #dddddd;
-    border-top: 5px solid #FDBE33;
+    border-top: 5px solid #FFA69E;
     border-radius: 50%;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
@@ -140,7 +140,7 @@ a:focus {
 }
 
 .back-to-top:hover i {
-    color: #FDBE33;
+    color: #FFA69E;
 }
 
 
@@ -250,7 +250,7 @@ a:focus {
 
 .navbar .navbar-brand {
     margin: 0;
-    color: #ffffff;
+    color: #FFA69E;
     font-size: 45px;
     line-height: 0px;
     font-weight: 700;
