--- a/client/public/assets/styles/style.css
+++ b/client/public/assets/styles/style.css
@@ -38,8 +38,8 @@ a:focus {
   font-weight: 500;
   color: #777777;
   border-radius: 0;
-  border: 2px solid #fdbe33;
-  box-shadow: inset 0 0 0 0 #fdbe33;
+  border: 2px solid #aed9e0;
+  box-shadow: inset 0 0 0 0 #aed9e0;
   transition: ease-out 0.3s;
   -webkit-transition: ease-out 0.3s;
   -moz-transition: ease-out 0.3s;
@@ -47,7 +47,7 @@ a:focus {
 
 .btn.btn-custom:hover {
   color: #20212b;
-  box-shadow: inset 0 0 0 30px #fdbe33;
+  box-shadow: inset 0 0 0 30px #aed9e0;
 }
 
 .btn:focus,
@@ -961,6 +961,8 @@ a:focus {
 .causes .causes-text h3 {
   font-size: 22px;
   font-weight: 700;
+  color: #ffa69e;
+  text-align: center;
 }
 
 .causes .causes-text p {
@@ -980,11 +982,11 @@ a:focus {
 
 .causes .causes-btn .btn:last-child {
   color: #20212b;
-  background: #fdbe33;
+  background: #ffffff;
 }
 
 .causes .causes-btn .btn:last-child:hover {
-  color: #ffffff;
+  color: black;
 }
 
 /*******************************/
@@ -1124,7 +1126,7 @@ a:focus {
 
 .team .team-social a:hover {
   color: #20212b;
-  background: #fdbe33;
+  background: #aed9e0;
 }
 
 .team .team-item:hover .team-text {
