--- a/client/public/assets/styles/style.css
+++ b/client/public/assets/styles/style.css
@@ -1056,11 +1056,14 @@ a:focus {
 /*******************************/
 /*********** Team CSS **********/
 /*******************************/
-.team {
+.team-img{
   position: relative;
   width: 100%;
   padding: 45px 0 15px 0;
 }
+
+
+
 
 .team .team-item {
   position: relative;
@@ -1072,8 +1075,13 @@ a:focus {
   overflow: hidden;
 }
 
+
+img {
+  height: 300px;
+}
+
 .team .team-img img {
-  width: 100%;
+ 
   transform: scale(1.1);
   margin-bottom: -15px;
   transition: 0.3s;
@@ -1086,15 +1094,20 @@ a:focus {
 .team .team-text {
   position: absolute;
   width: calc(100% - 40px);
-  height: 96px;
+  height: 40px;
   bottom: 0;
   left: 20px;
-  padding: 22px 0;
+  padding: 20px;
   text-align: center;
   background: #ffffff;
   transition: 0.3s;
   overflow: hidden;
 }
+
+.team-img{
+  width:100%;
+}
+
 
 .team .team-text h2 {
   font-size: 18px;
