--- a/client/src/pages/Home/home-index.css
+++ b/client/src/pages/Home/home-index.css
@@ -40,10 +40,7 @@
 #founders-header {
   color: #ffa69e;
 }
-img {
-  width: 300px;
-  height: 300px;
-}
+
 #contact-header {
   color: black;
 }
@@ -85,6 +82,20 @@ img {
 
 #learn-more {
   color: #aed9e0;
+}
+.section-header{
+  margin-top:100px;
+}
+
+.owl-item{
+  box-shadow: 5px 0 5px grey;
+}
+
+.navbar-expand-lg .navbar-collapse {
+  display: flex!important;
+  flex-basis: auto;
+  padding:10px;
+  margin-bottom:20px;
 }
 
 @media screen and (max-width: 755px) {
