--- a/client/public/assets/styles/style.css
+++ b/client/public/assets/styles/style.css
@@ -955,7 +955,7 @@ a:focus {
 }
 
 .causes .causes-text {
-  padding: 0 30px;
+  padding: 30px 30px;
 }
 
 .causes .causes-text h3 {
@@ -1056,14 +1056,11 @@ a:focus {
 /*******************************/
 /*********** Team CSS **********/
 /*******************************/
-.team-img{
+.team-img {
   position: relative;
   width: 100%;
   padding: 45px 0 15px 0;
 }
-
-
-
 
 .team .team-item {
   position: relative;
@@ -1075,13 +1072,11 @@ a:focus {
   overflow: hidden;
 }
 
-
 img {
   height: 300px;
 }
 
 .team .team-img img {
- 
   transform: scale(1.1);
   margin-bottom: -15px;
   transition: 0.3s;
@@ -1104,10 +1099,9 @@ img {
   overflow: hidden;
 }
 
-.team-img{
-  width:100%;
+.team-img {
+  width: 100%;
 }
-
 
 .team .team-text h2 {
   font-size: 18px;
