--- a/client/src/pages/Home/home-index.css
+++ b/client/src/pages/Home/home-index.css
@@ -40,6 +40,10 @@
 #founders-header {
   color: #ffa69e;
 }
+img {
+  width: 250px;
+  height: 300px;
+}
 
 #contact-header {
   color: black;
@@ -96,6 +100,9 @@
   flex-basis: auto;
   padding:10px;
   margin-bottom:20px;
+}
+.causes .causes-text h3 {
+  color: rgb(52, 50, 50);
 }
 
 @media screen and (max-width: 755px) {
